Cleanup 🧼 + familytree query 👨‍👩‍👦‍👦
