# api/docs/swagger.json
@@ -46,7 +46,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Person"
                         }
                     }
                 }
@@ -87,7 +87,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Person"
                         }
                     }
                 }
@@ -167,7 +167,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Person"
                         }
                     }
                 }
@@ -199,7 +199,39 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Person"
+                        }
+                    }
+                }
+            }
+        },
+        "/tree/{id}": {
+            "get": {
+                "description": "Gets Familiy Tree for a given Person ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tree"
+                ],
+                "summary": "Get Familiy Tree",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Person ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.FamilyTree"
                         }
                     }
                 }
@@ -207,6 +239,23 @@
         }
     },
     "definitions": {
+        "models.FamilyTree": {
+            "type": "object",
+            "properties": {
+                "edges": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Relation"
+                    }
+                },
+                "nodes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Person"
+                    }
+                }
+            }
+        },
         "models.Person": {
             "type": "object",
             "properties": {
@@ -224,6 +273,17 @@
                 },
                 "gender": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.Relation": {
+            "type": "object",
+            "properties": {
+                "child": {
+                    "type": "string"
+                },
+                "parent": {
+                    "type": "string"
                 }
             }
         }
