# api/models/relation.go
@@ -1,6 +1,6 @@
 package models
 
 type Relation struct {
-	Source string
-	Target string
+	Child  string
+	Parent string
 }
